fixed the alignment of profile picture and card

--- a/frontend_basic/styles.css
+++ b/frontend_basic/styles.css
@@ -6,18 +6,27 @@ body {
     padding: 0;
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 100vh;
+}
+
+.container {
+    display: flex;
+    align-items: center;
 }
 
 .profile-picture-container {
     width: 350px;
     height: 350px;
     border-radius: 50%;
-    overflow: hidden;
-    margin: 0 auto; /* Set left and right margins to auto for horizontal centering */
+    /* overflow: hidden;
+    margin: 0 auto; 
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
+
+    overflow: hidden;
+    margin-right: 40px; /* change this for space between profile picture and text card*/
 }
 
 .profile-picture {
@@ -26,3 +35,37 @@ body {
     display: block;
 }
 
+
+
+.card {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center; 
+
+}
+
+.text-container h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.text-container h3, .text-container h4 {
+    font-size: 1.2em;
+    margin-bottom: 15px;
+}
+
+/* .social-links {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px; /* Adjusted margin for spacing */
+/* } */
+
+/* .social-links a {
+    text-decoration: none;
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: #fff;
+    order-radius: 5px;
+} */ 
